# LATTICE-Swarm

./: .gitmodules  Cargo.toml  README.md
lattice-cli/: Cargo.toml
lattice-cli/src/: coding_agent.rs  config.rs  credentials.rs  main.rs  plugins.rs  runtime.rs  security.rs  session.rs
lattice-cli/src/commands/: bus_status.rs  config_cmd.rs  debug.rs  doctor.rs  list_agents.rs  mod.rs  models.rs  new_agent.rs  resolve.rs  run.rs  sessions.rs  stats.rs  validate.rs
lattice-cli/src/frontend/tui/: app.rs  event.rs  markdown.rs  mod.rs  state.rs  theme.rs  ui.rs
lattice-cli/src/frontend/tui/widgets/: composer.rs  menu.rs  message.rs  mod.rs  statusline.rs  transcript.rs  welcome.rs
wiki/: README.md
wiki/development/: submodules.md
wiki/getting-started/: installation.md  quickstart.md
wiki/operations/: runtime-layout.md  troubleshooting.md
wiki/reference/: cli.md  tui.md
