[package]
name = "lattice-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-core = { git = "https://github.com/Skyline10124/LATTICE-Runtime.git", branch = "main" }
lattice-agent = { git = "https://github.com/Skyline10124/LATTICE-Runtime.git", branch = "main" }
lattice-bus = { git = "https://github.com/Skyline10124/LATTICE-Runtime.git", branch = "main" }
lattice-plugin = { git = "https://github.com/Skyline10124/LATTICE-Runtime.git", branch = "main" }
lattice-plugins = { git = "https://github.com/Skyline10124/LATTICE-Plugins.git", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
colored = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
futures = "0.3"
chrono = "0.4"
dotenvy = "0.15"
sha2 = "0.10"
toml_edit = "0.22"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }

[features]
blob-store = ["lattice-agent/blob-store"]
